# cryptobot

./: .gitignore  3306  Makefile.am  Makefile.in  README.md  arbitrage.cpp  balances.cpp  bitfinex.cpp  bitfinex.h  bittrex.cpp  bittrex.h  bl3p.cpp  bl3p.h  botback  botfront  botproxy01  botproxy02  botproxy03  botproxy04  botproxy05  buy.cpp  buyers.cpp  chart.cpp  comment.cpp  config.h.in  configure  configure.ac  controllers.cpp  controllers.h  cpu.sh  cryptobot.cpp  cryptopia.cpp  cryptopia.h  currencies.cpp  deposits.cpp  download.cpp  eurbtc.cpp  exchanges.cpp  exchanges.h  expire.cpp  (+66 more)
cryptobot.xcodeproj/: project.pbxproj
cryptobot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cryptobot.xcodeproj/xcuserdata/teus.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cryptobot.xcodeproj/xcuserdata/teus.xcuserdatad/xcschemes/: cryptobot.xcscheme  xcschememanagement.plist
